# OSR3000---V4.1

./: .gitignore  CMakeLists.txt  sdkconfig
components/AltitudeEstimation/: altitude.c  altitude.h
components/eskf/: CMakeLists.txt  README.md  eskf.c  idf_component.yml  library.json
components/eskf/examples/: .gitignore
components/eskf/examples/basic/: CMakeLists.txt  basic.c
components/eskf/include/: eskf.h
components/esp_bmp390/: bmp390.c
components/esp_bmp390/include/: bmp390.h
components/icm20948-master/: CMakeLists.txt  icm20948.c  icm20948_i2c.c  icm20948_i2c.h
components/vqf-main/: CMakeLists.txt  vqf.cpp  vqf.hpp  vqf_c.cpp  vqf_c.h
main/: CMakeLists.txt  acquire.c  header.c  header.h  main.c  save_send.c
main/sensors/: adc.c  bmp.c  gps.c  icm.c
